# maelstrom-gate

./: ARCHITECTURE.md  AUDIT.md  LICENSE  README.de.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.zh-CN.md  SPEC.md  pyproject.toml
audits/: GATE_FAMILY_AUDIT_2026-04-19.md  STRICT_VALIDATION_2026-04-19.md
examples/: basic_usage.py  child_safety.py  compliance_quickstart.py  fastapi_middleware.py  langchain_tools.py  openai_functions.py
gatekeeper/: __init__.py  core.py  envelope.py  ingress.py  policy_protocol.py
maelstrom_gate/: __init__.py  core.py  envelope.py  ingress.py
schema/: envelope.schema.json  filter-result.schema.json  tool.schema.json
tests/: test_envelope_lifecycle.py  test_failure_injection.py  test_gate.py
