[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "maelstrom-gate"
version = "0.1.0"
description = "Runtime governance gate for AI tool access — dynamically filter tool manifests based on threat level"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Adam Scott Thomas"}]
keywords = ["ai", "governance", "agent", "tools", "safety", "runtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/adam-scott-thomas/maelstrom-gate"
Repository = "https://github.com/adam-scott-thomas/maelstrom-gate"

[tool.setuptools.packages.find]
include = ["maelstrom_gate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
