[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-keeper"
version = "1.0.0"
description = "Gatekeeper — runtime governance gate for AI tool access. Dynamically filter tool manifests based on threat level."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Adam Scott Thomas"}]
keywords = ["ai", "governance", "agent", "tools", "safety", "runtime", "gatekeeper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/adam-scott-thomas/gate-keeper"
Repository = "https://github.com/adam-scott-thomas/gate-keeper"

[tool.setuptools.packages.find]
include = ["gatekeeper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
